Bug 349118 - tags:// don't like spaces
Summary: tags:// don't like spaces
Status: RESOLVED FIXED
Alias: None
Product: frameworks-baloo
Classification: Frameworks and Libraries
Component: Tags (other bugs)
Version First Reported In: 5.18.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Vishesh Handa
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-06-13 21:56 UTC by Aristide
Modified: 2016-05-29 17:29 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Aristide 2015-06-13 21:56:00 UTC
When I put tags into file with a space (Eg : «My Little Zucchini»), and open tags:// into Dolphin, and open «My Little Zucchini», the list is empty. 

Note : Tag put with Dolphin and « attr -s "xdg.tags" -V "My Little Zucchini" "$file" » too

Reproducible: Always
Comment 1 Patrick Auernig 2016-02-15 02:34:58 UTC
Also happens on Arch Linux 64bit with Baloo version 5.18.0 and Linux 4.4.1
Comment 2 jesse12p+kdebugs 2016-03-18 15:34:26 UTC
I made a patch for this https://git.reviewboard.kde.org/r/126644/ but everyone apparently forgot about it.
Comment 3 Albert Astals Cid 2016-05-29 17:29:44 UTC
Git commit 3623a762f2f68fead845bcaa01e1feff02095802 by Albert Astals Cid, on behalf of Jesse Pullinen.
Committed on 29/05/2016 at 17:29.
Pushed by aacid into branch 'master'.

Fix using spaces in the tags kioslave
REVIEW: 126644

M  +1    -1    src/kioslaves/tags/kio_tags.cpp

http://commits.kde.org/baloo/3623a762f2f68fead845bcaa01e1feff02095802