Fix using spaces in the tags kioslave

BUG: 349118
REVIEW: 126644